--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,18 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="https://a.slack-edge.com/bv1-9/client-boot-styles.293c5a4.css?cacheKey=gantry-1613184053"
+      crossorigin="anonymous"
+    />
+    <link rel="shortcut icon" href="https://a.slack-edge.com/cebaa/img/ico/favicon.ico" />
+    <link
+      href="https://a.slack-edge.com/bv1-9/slack-icons-v2-16ca3a7.woff2"
+      rel="preload"
+      as="font"
+      crossorigin="anonymous"
+    />
     <title>슬랙</title>
   </head>
   <body>
